--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="page-name">Contacts</h2>
 
-    <!-- <include src="./partials/lines.html"></include> -->
+     <include src="./partials/lines.html"></include> 
 
     <div class="contacts-picture">
       <picture>
