--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -1,34 +1,24 @@
 <section class="blog">
   <div class="container">
-    <!-- заголовок секції однаковий- такий же як Take order  и  Contacts -->
-    <!-- тому клас треба додати йому такий же як у iнших  -->
     <h2 class="page-name">Blog</h2>
 
+    <include src="./partials/lines.html"></include>
     <ul class="blog-list">
       <li class="blog-item">
         <div class="blog-picture-desktop">
           <picture>
-            <source
-              srcset="
+            <source srcset="
                 ./images/blog1_desk_1x.jpg 1x,
                 ./images/blog1_desk_2x.jpg 2x
-              "
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="
+              " media="(min-width: 1280px)" />
+            <source srcset="
                 ./images/blog1_tablet_1x.jpg 1x,
                 ./images/blog1_tablet_2x.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="
+              " media="(min-width: 768px)" />
+            <source srcset="
                 ./images/blog1_mobile_1x.jpg 1x,
                 ./images/blog1_mobile_2x.jpg 2x
-              "
-              media="(max-width: 767px)"
-            />
+              " media="(max-width: 767px)" />
             <img src="./images/blog1_desk_1x.jpg" alt="blog" width="390" />
           </picture>
         </div>
@@ -37,27 +27,18 @@
           <div class="blog-container-tablet">
             <div class="blog-picture">
               <picture>
-                <source
-                  srcset="
+                <source srcset="
                     ./images/blog1_desk_1x.jpg 1x,
                     ./images/blog1_desk_2x.jpg 2x
-                  "
-                  media="(min-width: 1280px)"
-                />
-                <source
-                  srcset="
+                  " media="(min-width: 1280px)" />
+                <source srcset="
                     ./images/blog1_tablet_1x.jpg 1x,
                     ./images/blog1_tablet_2x.jpg 2x
-                  "
-                  media="(min-width: 768px)"
-                />
-                <source
-                  srcset="
+                  " media="(min-width: 768px)" />
+                <source srcset="
                     ./images/blog1_mobile_1x.jpg 1x,
                     ./images/blog1_mobile_2x.jpg 2x
-                  "
-                  media="(max-width: 767px)"
-                />
+                  " media="(max-width: 767px)" />
                 <img src="./images/blog1_desk_1x.jpg" alt="blog" width="390" />
               </picture>
             </div>
@@ -73,7 +54,7 @@
             as with any kind of ...
           </p>
 
-          <!-- посилання на Blog Article Page -->
+          
           <a class="blog-etg" href="./blog-article.html">Learn more</a>
         </div>
       </li>
@@ -82,27 +63,18 @@
       <li class="blog-item">
         <div class="blog-picture-desktop">
           <picture>
-            <source
-              srcset="
+            <source srcset="
                 ./images/blog2_desk_1x.jpg 1x,
                 ./images/blog2_desk_2x.jpg 2x
-              "
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="
+              " media="(min-width: 1280px)" />
+            <source srcset="
                 ./images/blog2_tablet_1x.jpg 1x,
                 ./images/blog2_tablet_2x.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="
+              " media="(min-width: 768px)" />
+            <source srcset="
                 ./images/blog2_mobile_1x.jpg 1x,
                 ./images/blog2_mobile_2x.jpg 2x
-              "
-              media="(max-width: 767px)"
-            />
+              " media="(max-width: 767px)" />
             <img src="./images/blog2_desk_1x.jpg" alt="blog" width="390" />
           </picture>
         </div>
@@ -114,27 +86,18 @@
           <div class="blog-container-tablet">
             <div class="blog-picture">
               <picture>
-                <source
-                  srcset="
+                <source srcset="
                     ./images/blog2_desk_1x.jpg 1x,
                     ./images/blog2_desk_2x.jpg 2x
-                  "
-                  media="(min-width: 1280px)"
-                />
-                <source
-                  srcset="
+                  " media="(min-width: 1280px)" />
+                <source srcset="
                     ./images/blog2_tablet_1x.jpg 1x,
                     ./images/blog2_tablet_2x.jpg 2x
-                  "
-                  media="(min-width: 768px)"
-                />
-                <source
-                  srcset="
+                  " media="(min-width: 768px)" />
+                <source srcset="
                     ./images/blog2_mobile_1x.jpg 1x,
                     ./images/blog2_mobile_2x.jpg 2x
-                  "
-                  media="(max-width: 767px)"
-                />
+                  " media="(max-width: 767px)" />
                 <img src="./images/blog2_desk_1x.jpg" alt="blog" width="390" />
               </picture>
             </div>
@@ -149,7 +112,7 @@
             features today ...
           </p>
 
-          <!-- посилання на Blog Article Page -->
+          
           <a class="blog-etg" href="./blog-article.html">Learn more</a>
         </div>
       </li>
@@ -158,27 +121,18 @@
       <li class="blog-item">
         <div class="blog-picture-desktop">
           <picture>
-            <source
-              srcset="
+            <source srcset="
                 ./images/blog3_desk_1x.jpg 1x,
                 ./images/blog3_desk_2x.jpg 2x
-              "
-              media="(min-width: 1280px)"
-            />
-            <source
-              srcset="
+              " media="(min-width: 1280px)" />
+            <source srcset="
                 ./images/blog3_tablet_1x.jpg 1x,
                 ./images/blog3_tablet_2x.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
-            <source
-              srcset="
+              " media="(min-width: 768px)" />
+            <source srcset="
                 ./images/blog3_mobile_1x.jpg 1x,
                 ./images/blog3_mobile_2x.jpg 2x
-              "
-              media="(max-width: 767px)"
-            />
+              " media="(max-width: 767px)" />
             <img src="./images/blog3_desk_1x.jpg" alt="blog" width="390" />
           </picture>
         </div>
@@ -187,27 +141,18 @@
           <div class="blog-container-tablet">
             <div class="blog-picture">
               <picture>
-                <source
-                  srcset="
+                <source srcset="
                     ./images/blog3_desk_1x.jpg 1x,
                     ./images/blog3_desk_2x.jpg 2x
-                  "
-                  media="(min-width: 1280px)"
-                />
-                <source
-                  srcset="
+                  " media="(min-width: 1280px)" />
+                <source srcset="
                     ./images/blog3_tablet_1x.jpg 1x,
                     ./images/blog3_tablet_2x.jpg 2x
-                  "
-                  media="(min-width: 768px)"
-                />
-                <source
-                  srcset="
+                  " media="(min-width: 768px)" />
+                <source srcset="
                     ./images/blog3_mobile_1x.jpg 1x,
                     ./images/blog3_mobile_2x.jpg 2x
-                  "
-                  media="(max-width: 767px)"
-                />
+                  " media="(max-width: 767px)" />
                 <img src="./images/blog3_desk_1x.jpg" alt="blog" width="390" />
               </picture>
             </div>
@@ -223,7 +168,6 @@
             gaming mouse ...
           </p>
 
-          <!-- посилання на Blog Article Page -->
           <a class="blog-etg" href="./blog-article.html">Learn more</a>
         </div>
       </li>
