--- a/src/partials/take-order.html
+++ b/src/partials/take-order.html
@@ -1,20 +1,20 @@
-<section class="to__main container-take-order">
-  <h1 class="to__title">Take order</h1>
-  <div class="to__line">
-    <div class="to__line_first">
-      <div class="to__line-one"></div>
-      <div class="to__line-two"></div>
+<section class="to-main container-take-order">
+  <h1 class="to-title">Take order</h1>
+  <div class="to-line">
+    <div class="to-line_first">
+      <div class="to-line-one"></div>
+      <div class="to-line-two"></div>
     </div>
-    <div class="to__line_second">
-      <div class="to__line-three"></div>
-      <div class="to__line-four"></div>
+    <div class="to-line_second">
+      <div class="to-line-three"></div>
+      <div class="to-line-four"></div>
     </div>
   </div>
 
-  <div class="to__product_info">
-    <h2 class="to__name">Xiberia K9 PRO PC Headset</h2>
+  <div class="to-product_info">
+    <h2 class="to-name">Xiberia K9 PRO PC Headset</h2>
     <div class="product">
-      <div class="to__image_main">
+      <div class="to-image_main">
         <picture>
           <source
             srcset="
@@ -31,22 +31,22 @@
             media="(max-width: 767px)"
           />
           <img
-            class="to__img-main"
+            class="to-img-main"
             src="/src/images/take-order/to-img-main.jpg"
             alt="picture Xiberia K9 PRO PC Headset"
             width="387"
           />
         </picture>
       </div>
-      <div class="to__price">
-        <p class="to__sale-price">65.14 USD</p>
-        <p class="to__discount-price">55.14 USD</p>
+      <div class="to-price">
+        <p class="to-sale-price">65.14 USD</p>
+        <p class="to-discount-price">55.14 USD</p>
       </div>
     </div>
 
-    <div class="to__images">
-      <ul class="to__images-list list">
-        <li class="to__image_item">
+    <div class="to-images">
+      <ul class="to-images-list list">
+        <li class="to-image_item">
           <picture>
             <source
               srcset="
@@ -63,14 +63,14 @@
               media="(max-width: 767px)"
             />
             <img
-              class="to__image-img"
+              class="to-image-img"
               src="/src/images/take-order/to-img-secondary_1.jpg"
               alt="product image 1"
               width="154"
             />
           </picture>
         </li>
-        <li class="to__image_item">
+        <li class="to-image_item">
           <picture>
             <source
               srcset="
@@ -87,14 +87,14 @@
               media="(max-width: 767px)"
             />
             <img
-              class="to__image-img"
+              class="to-image-img"
               src="/src/images/take-order/to-img-secondary_2.jpg"
               alt="product image 2"
               width="154"
             />
           </picture>
         </li>
-        <li class="to__image_item">
+        <li class="to-image_item">
           <picture>
             <source
               srcset="
@@ -111,14 +111,14 @@
               media="(max-width: 767px)"
             />
             <img
-              class="to__image-img"
+              class="to-image-img"
               src="/src/images/take-order/to-img-secondary_3.jpg"
               alt="product image 3"
               width="154"
             />
           </picture>
         </li>
-        <li class="to__image_item">
+        <li class="to-image_item">
           <picture>
             <source
               srcset="
@@ -135,7 +135,7 @@
               media="(max-width: 767px)"
             />
             <img
-              class="to__image-img"
+              class="to-image-img"
               src="/src/images/take-order/to-img-secondary_4.jpg"
               alt="product image 4"
               width="154"
@@ -146,18 +146,18 @@
     </div>
   </div>
 
-  <div class="to__contact">
-    <p class="to__contact-title">CONTACT US</p>
+  <div class="to-contact">
+    <p class="to-contact-title">CONTACT US</p>
     <div class="to_form">
       <form>
-        <div class="to__form-full">
-          <div class="to__form-send">
-            <div class="to__form-field">
+        <div class="to-form-full">
+          <div class="to-form-send">
+            <div class="to-form-field">
               <label>
                 <input
                   type="text"
                   name="name"
-                  class="to__form-input"
+                  class="to-form-input"
                   placeholder="Name"
                   pattern="^[a-zA-Z]+\s[a-zA-Z]+$"
                   title="Username should only contain lowercase letters. e.g. john"
@@ -165,12 +165,12 @@
               </label>
             </div>
 
-            <div class="to__form-field">
+            <div class="to-form-field">
               <label>
                 <input
                   type="email"
                   name="email"
-                  class="to__form-input"
+                  class="to-form-input"
                   id="email"
                   placeholder="Email"
                 />
@@ -261,19 +261,19 @@
             <!-- Select конец -->
           </div>
           <div class="to_form_text">
-            <label class="to__form-field comment">Leave your message</label>
+            <label class="to-form-field comment">Leave your message</label>
             <textarea
               name="comment"
-              class="to__form-textarea"
+              class="to-form-textarea"
               placeholder=""
             ></textarea>
           </div>
         </div>
-        <div class="to__form-btn-grp">
-          <button type="submit" class="to__form-btn to__form-btn-buy">
+        <div class="to-form-btn-grp">
+          <button type="submit" class="to-form-btn to-form-btn-buy">
             buy it now
           </button>
-          <button type="submit" class="to__form-btn to__form-btn-add">
+          <button type="submit" class="to-form-btn to-form-btn-add">
             ADD TO CART
           </button>
         </div>
@@ -281,4 +281,3 @@
     </div>
   </div>
 </section>
- 
